<resources>
    <string name="app_name">Sword Group Task</string>
    <string name="add_student">Add Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="name_colon">Name : </string>
    <string name="age_colon">Age : </string>
    <string name="m_class_colon">Class : </string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="m_class">Class</string>
    <string name="submit">Submit</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_age">Please enter age</string>
    <string name="please_enter_class">Please enter class</string>
    <string name="are_you_sure">Are you sure you want to delete this student</string>
</resources>